@@ -186,6 +186,7 @@
 .backdrop {
     @extend %fullscreen;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
     pointer-events: none;
+    backdrop-filter: blur(0.5rem);
 }
